[project]
name = "rl-project"
version = "0.1.0"
description = "Initial state distribution manipulation for off-policy RL"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "torch>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
